compiler/tests/fail/stack_allocation/x86-64/merge_intersection.jazz
// If an array maps to a region only in one branch of an if,
// it is considered mapping to no region after the if

export fn main (reg u64 b) -> reg u64 {
  stack u64[10] s;
  reg ptr u64[1] r;
  reg u64 res;

  s[0] = 1;

  if (b != 0) {
    r = s[0:1];
    r[0] = 1;
    // r points to a subregion of s
  } else {
    // r not defined
  }
  // r points to no region
  s[0:1] = r; // no region associated to variable r

  res = s[0];
  return res;
}
